extends CanvasLayer

signal start_game


func _on_victim_1_button_pressed():
	pass # Replace with function body.


func _on_victim_2_button_pressed():
	pass # Replace with function body.


func _on_victim_3_button_pressed():
	pass # Replace with function body.


func _on_victim_4_button_pressed():
	pass # Replace with function body.


func _on_victim_5_button_pressed():
	pass # Replace with function body.
